# automacao-navegacao-android

./: .gitignore  base.resource  pyproject.toml  readme.md  run_tests.sh
resource/locators/: menuAppLocators.yml  networkLocators.yml
resource/locators/configAutomation/: configLocators.yml  dispConectados.yml
resource/locators/emulador/: chromeLocator.yml  configLocators.yml
resource/locators/gpos760/: configLocators.yml
resource/locators/my_device/: configLocators.yml
resource/pages/: chromePage.resource  configPage.resource
resource/pages/configAutomation/: configPiloto.resource  dispConectados.resource
resource/pages/gpos760/: configPage.resource
resource/pages/my_device/: configPage.resource
resource/utils/: openApp.resource  screenshotUtils.resource  scrollAction.resource  swipeAction.resource  telaConfig.resource
test/: chrome.robot  config.robot  menuApp.robot
test/dispositivoFisico/: configAutomation.robot  configDispFis.robot  configGPOS820.robot  rascunho.robot  testDispConectados.robot
test/emulador/: config.robot  menuApp.robot
